Fix [Feature Vectors] Delete feature pop-up isn't aligned (#600)

--- a/src/components/Details/details.scss
+++ b/src/components/Details/details.scss
@@ -232,12 +232,6 @@
       }
     }
 
-    .pop-up-dialog {
-      &__overlay {
-        position: absolute;
-      }
-    }
-
     &.pop-up-dialog-opened {
       overflow-y: hidden;
     }
